Cambio de mision y textos

--- a/index.html
+++ b/index.html
@@ -351,21 +351,22 @@
     </header>
 
     <section class="hero reveal" id="inicio">
-        <h1>Botanas Crujientes, Deliciosas y Saludables</h1>
+        <h1>La Crunchería</h1>
         <p>Snacks hechos con vegetales naturales. El equilibrio perfecto entre cuidarte y disfrutar de un gran sabor.</p>
+        <p>"Crujiente, delicioso y natural"</p>
         <a href="#productos" class="cta-button">Ver Productos</a>
     </section>
 
     <section class="nosotros reveal" id="nosotros">
         <h2>Nuestra Historia</h2>
-        <p>Somos una comercializadora mexicana de botanas saludables. Nuestro enfoque principal creció cuando se quitó por completo la comida chatarra en cooperativas escolares. Desde ahí nació nuestra idea de llegar a las escuelas con el fin de que niños, jóvenes, personas que se preocupan por tener una alimentación balanceada y cualquiera que quiera probar nuestros productos, disfruten de snacks saludables hechos con vegetales naturales, garantizando siempre un acceso directo y de calidad.</p>
+        <p>Surgimos como una alternativa de botanas saludables para el mercado mexicano, con ingredientes naturales y de calidad, a precios justos. Porque lo nutritivo también puede ser delicioso.</p>
     </section>
 
     <section class="mision-section reveal" id="mision">
         <div class="mision-container">
-            <h2>Nuestra Misión y Objetivo</h2>
+            <h2>Nuestra Misión</h2>
             <div class="mision-box">
-                <p>"Nuestra misión y nuestro objetivo es que, además de ser una comercializadora mexicana líder que facilite el acceso a botanas nutritivas y naturales, también optimicemos la cadena logística para llegar al consumidor final, bajo un modelo de comercio justo que impulse el bienestar de nuestra comunidad y el desarrollo integral de los productores locales."</p>
+                <p>"Nuestra misión es ser una comercializadora mexicana líder que facilite el acceso a botanas nutritivas y naturales, también optimicemos la cadena logística para llegar al consumidor final, bajo un modelo de comercio justo que impulse el bienestar de nuestra comunidad y el desarrollo integral de los productores locales."</p>
             </div>
         </div>
     </section>
